<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarUsuarioActivity">

    <TextView
        android:id="@+id/lbl_registrar_usuario"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="18dp"
        android:text="@string/lbl_registrar_usuario"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/lbl_nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbl_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="61dp"
        android:text="@string/lbl_nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbl_apellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="34dp"
        android:text="@string/lbl_apellido"
        app:layout_constraintEnd_toEndOf="@+id/lbl_registrar_usuario"
        app:layout_constraintTop_toBottomOf="@+id/lbl_registrar_usuario" />

    <TextView
        android:id="@+id/lbl_rut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="122dp"
        android:layout_marginBottom="122dp"
        android:text="@string/lbl_rut"
        app:layout_constraintBottom_toTopOf="@+id/txt_edad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_registrar_usuario" />

    <EditText
        android:id="@+id/txt_rut"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="41dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/rut"
        android:inputType="textPersonName"
        android:text="@string/txt_rut"
        app:layout_constraintBottom_toTopOf="@+id/lbl_sexo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lbl_rut" />

    <TextView
        android:id="@+id/lbl_edad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_edad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_rut" />

    <EditText
        android:id="@+id/txt_edad"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="110dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/female"
        app:layout_constraintEnd_toStartOf="@+id/lbl_sexo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/female" />

    <EditText
        android:id="@+id/txt_nombre"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="39dp"
        android:ems="10"
        android:hint="Nombre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/lbl_rut"
        app:layout_constraintEnd_toStartOf="@+id/txt_apellido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lbl_nombre" />

    <EditText
        android:id="@+id/txt_apellido"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="Apellido"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/txt_nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_nombre"
        app:layout_constraintTop_toTopOf="@+id/txt_nombre" />

    <TextView
        android:id="@+id/lbl_sexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="15dp"
        android:text="@string/lbl_sexo"
        app:layout_constraintBottom_toTopOf="@+id/male"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_edad" />

    <Switch
        android:id="@+id/sw_esHombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:text="@string/sw_esHombre"
        app:layout_constraintEnd_toStartOf="@+id/male"
        app:layout_constraintStart_toEndOf="@+id/female"
        app:layout_constraintTop_toTopOf="@+id/female" />

    <Spinner
        android:id="@+id/cbo_deporte"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="120dp"
        android:entries="@array/array_deportes"
        app:layout_constraintBottom_toTopOf="@+id/lbl_palabra_usuarios"
        app:layout_constraintEnd_toEndOf="@+id/txt_edad"
        app:layout_constraintStart_toStartOf="@+id/txt_rut"
        app:layout_constraintTop_toTopOf="@+id/female" />

    <TextView
        android:id="@+id/lbl_deporte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="302dp"
        android:text="@string/lbl_deporte"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_registrar_usuario_enRegistrar"
        android:layout_width="185dp"
        android:layout_height="69dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="117dp"
        android:layout_marginBottom="116dp"
        android:text="@string/btn_registrar_usuario_enRegistrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_deporte" />

    <TextView
        android:id="@+id/lbl_cantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:text="@string/lbl_cantidad"
        app:layout_constraintBottom_toTopOf="@+id/lbl_numero_usuarios"
        app:layout_constraintEnd_toEndOf="@+id/lbl_numero_usuarios"
        app:layout_constraintStart_toEndOf="@+id/lbl_numero_usuarios" />

    <TextView
        android:id="@+id/lbl_numero_usuarios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="12dp"
        android:text="@string/lbl_numero_usuarios"
        app:layout_constraintBottom_toTopOf="@+id/lbl_palabra_usuarios"
        app:layout_constraintStart_toStartOf="@+id/lbl_palabra_usuarios" />

    <TextView
        android:id="@+id/lbl_palabra_usuarios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="46dp"
        android:text="@string/lbl_palabra_usuarios"
        app:layout_constraintBottom_toTopOf="@+id/btn_volver_desde_registrar"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_volver_desde_registrar"
        android:layout_width="236dp"
        android:layout_height="35dp"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="37dp"
        android:text="@string/btn_volver_desde_registrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_registrar_usuario_enRegistrar" />

    <ImageView
        android:id="@+id/male"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_gravity="center"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="248dp"
        android:src="@drawable/male"
        app:layout_constraintBottom_toBottomOf="@+id/btn_registrar_usuario_enRegistrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sw_esHombre"
        app:layout_constraintTop_toBottomOf="@+id/lbl_nombre" />

    <ImageView
        android:id="@+id/female"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="37dp"
        android:src="@drawable/female"
        app:layout_constraintBottom_toTopOf="@+id/lbl_deporte"
        app:layout_constraintEnd_toStartOf="@+id/sw_esHombre"
        app:layout_constraintStart_toEndOf="@+id/txt_edad"
        app:layout_constraintTop_toTopOf="@+id/lbl_sexo" />


</androidx.constraintlayout.widget.ConstraintLayout>